# shadow-calculator

./: CONTRIBUTING.md  DEVELOPMENT_ROADMAP.md  LICENSE  README.md  create_test_data.py  index.html  package-lock.json  package.json  setup.sh  vite.config.ts
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
src/: App.tsx  styles.css  types.ts
src-tauri/: Cargo.toml  shadows.csv  tauri.conf.json
src-tauri/src/: main.rs  raster_io.rs  shadow_engine.rs  sun_position.rs  types.rs
src/components/: DualModeUpload.tsx  FileUpload.tsx  LeafletMapView.tsx  MapView.tsx  MetadataDisplay.tsx  PerformanceSettings.tsx  ProgressModal.tsx  ResultsPanel.tsx  SeasonalDashboard.tsx  TimeControls.tsx
test_data/: test_dem.tif  test_dsm.tif
