[package]
name = "shadow-calculator"
version = "0.0.1"
description = "Shadow calculation from DSM/DTM"
authors = ["Shadow Calculator Dev"]
license = ""
repository = ""
edition = "2021"
build = "build.rs"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = ["shell-open", "fs-all", "dialog-all", "path-all"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
geo = "0.28"
geo-types = { version = "0.7", features = ["serde"] }
proj = "0.27"
gdal = { version = "0.16", features = ["bindgen"] }
gdal-sys = "0.9"
ndarray = { version = "0.15", features = ["serde"] }
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.8"
rayon = "1.8"
indicatif = "0.17"
anyhow = "1.0"
thiserror = "1.0"
dirs = "5.0"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
